<resources>
    <string name="app_name">Restaurant</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="account">Account number</string>
    <string name="signUp_username">username</string>
    <string name="signUp_password">password</string>
    <string name="signUp_firstname">fisrt name</string>
    <string name="signUp_lastname">last name</string>
    <string name="signUp_phone">phone number</string>
    <string name="signUp_email">email</string>
    <string name="Order">Order Information</string>
    <string name="Tracking">Tracking Order</string>
    <string name="Account">Account Information</string>
    <string name="Logout">Log Out</string>
    <string name="title_activity_delivery_man">DeliveryMan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>
    <string name="null1"></string>

    <string name="menu_order">Order</string>
    <string name="menu_user_info">User Info</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_googlemaps">GoogleMaps</string>
    <string name="title_activity_delivery_man1">DeliveryMan1Activity</string>
    <string name="menu_home_user">Home_user</string>
    <string name="status">status</string>
    <string name="_100">100</string>
</resources>